Adding Command Line Interface: phase 2 - Changed GUI initialization (java reflection now) - Updated everything where Param.role == ArduSim.SIMULATOR is used to ArduSim.SIMULATOR_GUI and ArduSim.SIMULATOR_CLI where necessary. -> Now CLI works for all protocols who don`t have an internal gui config. i.e Fake, Shakeup and Vision(not tested) - used IntellijJ to remove some warnings